--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - ComedyCaptions</title>
+    <meta name="description" content="Privacy Policy for ComedyCaptions - AI-powered comedy video processing application">
+    <meta property="og:title" content="Privacy Policy - ComedyCaptions">
+    <meta property="og:description" content="Privacy Policy for ComedyCaptions application">
+    <meta property="og:type" content="website">
+    <meta name="robots" content="index, follow">
     <style>
         * {
             margin: 0;
