--- a/terms.html
+++ b/terms.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service - ComedyCaptions</title>
+    <meta name="description" content="Terms of Service for ComedyCaptions - AI-powered comedy video processing application">
+    <meta property="og:title" content="Terms of Service - ComedyCaptions">
+    <meta property="og:description" content="Terms of Service for ComedyCaptions application">
+    <meta property="og:type" content="website">
+    <meta name="robots" content="index, follow">
     <style>
         * {
             margin: 0;
