Add CNAME for comedycaptions.neurogrid.com

--- a/privacy.html
+++ b/privacy.html
@@ -193,7 +193,7 @@
             <div class="contact-info">
                 <h3>Contact Information</h3>
                 <p>If you have questions about this Privacy Policy, please contact us at:</p>
-                <p><strong>Email:</strong> sam@neurogrid.com</p>
+                <p><strong>Email:</strong> privacy@neurogrid.com</p>
             </div>
         </div>
     </div>
