--- a/terms.html
+++ b/terms.html
@@ -213,7 +213,7 @@
             <div class="contact-info">
                 <h3>Contact Information</h3>
                 <p>For questions about these Terms of Service, contact us at:</p>
-                <p><strong>Email:</strong> sam@neurogrid.com</p>
+                <p><strong>Email:</strong> legal@neurogrid.com</p>
             </div>
         </div>
     </div>
